Fixed temperature text alignment, fixed a filepath

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,10 @@
 	padding: 10px;
 }
 
+.weather-header h1 {
+	text-align: right;	
+}
+
 #weather-text {
 	text-align: right;
 	color: black;
